@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: coremodel.cpp,v 1.5 2003/09/11 16:30:21 garbeam Exp $
+ * $Id: coremodel.cpp,v 1.6 2003/09/28 21:52:11 squig Exp $
  *
  *****************************************************************************/
 #include "coremodel.h"
@@ -34,17 +34,6 @@
 CoreModel::CoreModel(QString type, QString description)
     : BlockModel(type, description)
 {
-    // FIX: remove
-    PinModel *pin = new PinModel(this, QString("Input1"));
-    pin->setType(PinModel::INPUT);
-    addPin(pin);
-    pin = new PinModel(this, "another Input");
-    pin->setType(PinModel::INPUT);
-    addPin(pin);
-    pin = new PinModel(this, "Output");
-    pin->setType(PinModel::OUTPUT);
-    addPin(pin);
-    // FIX: end remove
 }
 
 CoreModel::CoreModel(QDomElement coreElement)
@@ -64,9 +53,6 @@ QCanvasItemList CoreModel::createView(QCanvas *canvas)
     return list;
 }
 
-/**
- * Produces the XML representation of this instance
- */
 QDomElement CoreModel::serialize(QDomDocument *document)
 {
     QDomElement root = BlockModel::serialize(document);
